[package]
name = "sticks-overlay"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "stickoverlay"
path = "src/main.rs"

[dependencies]
blackbox-log = "0.4.3"
tiny-skia = "0.11"
clap = { version = "4", features = ["derive"] }
rayon = "1"
anyhow = "1"
glob = "0.3"

[profile.release]
lto = true
codegen-units = 1
